# nuni-menu

./: README.md  endpoints.json  pyproject.toml
note/: endpoints.ipynb  lunch_menu.csv
pages/: 1_Input.py  2_InputCheck.py  3_Select.py  3_Stat.py  4_BulkInsert.py  4_Chart.py  5_BulkInsert.py  6_Api.py  7_Sync.py
src/nuni_menu/: .db.py.swp  constraints.py  db.py
