[project]
name = "nuni-menu"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "matplotlib>=3.10.0", "psycopg[binary,pool]>=3.2.4", "streamlit>=1.41.1", "python-dotenv>=1.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
